feature-BC-4119 changes for comments